# BatteryClaw

./: README.md
READ FIRST/get startted/: environment.md  exe101.md
READ FIRST/review powershell config ui/: review poweshell config ui.md
READ FIRST/review py cs/: review code 1-6.md  review code 13-18.md  review code 19-24.md  review code 25-30.md  review code 31-36.md  review code 37-42.md  review code 43-48.md  review code 7-12.md
version 1 - key done but not clever/BatteryClaw gửi cho khách/: FILE EXE IN HERE.txt
version 1 - key done but not clever/BatteryClaw gửi cho khách/models/: batteryclaw_policy.onnx  batteryclaw_policy.onnx.data
version 1 - key done but not clever/BatteryClaw_end/: build_business.ps1  check_env.ps1
version 1 - key done but not clever/BatteryClaw_end/app/: app_integrations.py  buy_business.py
version 1 - key done but not clever/BatteryClaw_end/brain/: rl_brain.py
version 1 - key done but not clever/BatteryClaw_end/datacollector/: data_collector.py  schema.py
version 1 - key done but not clever/BatteryClaw_end/engine_dotnet/: BatteryClaw.Engine.csproj  Program.cs
version 1 - key done but not clever/BatteryClaw_end/server/: DEPLOY_HTTPS.md
version 1 - key done but not clever/BatteryClaw_end/simulator/: battery_env.py  train.py
version 1 - key done but not clever/BatteryClaw_end/worldmodel/: world_model.py
version 1 - key done but not clever/document/: architecture.md  engineer.md  roadmap.md
version 2 - add simu and review/batteryclaw - new code/: build_business.ps1
version 2 - add simu and review/batteryclaw - new code/app/: buy_business.py
version 2 - add simu and review/batteryclaw - new code/brain/: rl_brain.py
version 2 - add simu and review/batteryclaw - new code/commercial/: notifications.py  profiles.py  tiers.py
version 2 - add simu and review/batteryclaw - new code/dashboard/: server.py
version 2 - add simu and review/batteryclaw - new code/datacollector/: requirements.txt  reward.py
version 2 - add simu and review/batteryclaw - new code/engine_dotnet/: Program.cs
version 2 - add simu and review/batteryclaw - new code/online/: online_loop.py
version 2 - add simu and review/dist - outcome/: FILE EXE IN HERE.txt
version 2 - add simu and review/document/: architecture2.md  engineer2.md  new step.md  roadmap2.md
version 2 - add simu and review/roadmap/: 1 add simulator.md  2 add simulator.md  3 add simulator.md  4 review.txt  5 review.txt  6 review.txt
version 3 - commercial/batteryclaw - new code/: build_business.ps1
version 3 - commercial/batteryclaw - new code/engine/: CMakeLists.txt
version 3 - commercial/batteryclaw - new code/engine/src/: context_collector.cpp  gpu_monitor.cpp  tray_launcher.cpp
version 3 - commercial/document/: architecture3.md  engineer3.md  experimental results.md  new step.md  roadmap3.md
(+86 files in other folders)
